--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,4 @@
 @import "./layout/mains/all-pages";
 @import "./layout/mains/precompra-main";
 @import "./layout/mains/carrito";
+@import "./layout/mains/pregs";
