Agregue funcionalidad al boton de comprar al final y una alerta de que esta todo ok! solo falta hacer el html y css de mi cuenta

--- a/css/style.css
+++ b/css/style.css
@@ -334,3 +334,10 @@ body main .todas-pregs {
     font-size: 30px; }
   body main .todas-pregs .p-pregs {
     font-size: 19px; }
+
+body .fin-medio {
+  display: flex;
+  justify-content: center;
+  margin-top: 18%;
+  font-size: 28px;
+  font-family: arial; }
