--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,4 @@
 @import "./layout/mains/precompra-main";
 @import "./layout/mains/carrito";
 @import "./layout/mains/pregs";
+@import "./layout/mains/fin";
