--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,3 +6,5 @@
 @import "./layout/mains/carrito";
 @import "./layout/mains/pregs";
 @import "./layout/mains/fin";
+@import "./layout/mains/mi-cuenta";
+@import "./layout/mains/crear";
