funciones de cerrar sesion y informacion en el perfil

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,3 +8,4 @@
 @import "./layout/mains/fin";
 @import "./layout/mains/mi-cuenta";
 @import "./layout/mains/crear";
+@import "./layout/mains/perfil-usuario";
