--- a/css/style.css
+++ b/css/style.css
@@ -388,4 +388,49 @@ body main .crear {
   border-color: black;
   background-color: black;
   color: white;
-  font-size: 23px; }
+  font-size: 23px;
+  margin-top: 20px; }
+
+body main {
+  margin-top: 5%;
+  margin-bottom: 8%; }
+  body main .perfil-completo {
+    display: flex;
+    gap: 15%; }
+    body main .perfil-completo .card-header {
+      background-color: black;
+      color: white; }
+    body main .perfil-completo .card-img {
+      max-width: 540px;
+      margin-top: 3%;
+      box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+      margin-left: 3%;
+      border-radius: 10px;
+      height: 100%; }
+      body main .perfil-completo .card-img .col-md-8 {
+        padding: 10px;
+        display: flex;
+        align-items: center; }
+      body main .perfil-completo .card-img .row {
+        padding: 28px; }
+      body main .perfil-completo .card-img .card-body {
+        margin-left: 20px; }
+    body main .perfil-completo .perfil {
+      height: 100%; }
+      body main .perfil-completo .perfil .card {
+        width: 30rem;
+        margin-right: 10%;
+        margin-top: 9%;
+        box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1); }
+        body main .perfil-completo .perfil .card .list-group {
+          display: flex;
+          align-items: center; }
+  body main .div-cerrar-sesion {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    margin-top: 2%;
+    margin-right: 2%; }
+    body main .div-cerrar-sesion .btn {
+      margin-right: 2%;
+      margin-left: 1%; }
