--- a/scss/layout/mains/_all-pages.scss
+++ b/scss/layout/mains/_all-pages.scss
@@ -46,6 +46,12 @@ body{
                             color: white;
                             font-size: 23px;
                         }
+                        .boton-ver:hover{
+                            border-radius: 20px;
+                            border-color: rgb(0, 0, 0);
+                            background-color: rgb(255, 255, 255);
+                            color: rgb(0, 0, 0);
+                        }
                        }
                     }
                 }
